--- a/heartbeat/tests/hp.ipynb
+++ b/heartbeat/tests/hp.ipynb
@@ -795,7 +795,7 @@
     "x_min, x_max = 0, 1000\n",
     "\n",
     "try:\n",
-    "    for i in range(sensor.length):\n",
+    "    for i in range(len(sensor)):\n",
     "        signal_value, timestamp = sensor.read_signal()\n",
     "        all_signal_values.append(signal_value)\n",
     "        signal_processor.update_signal(signal_value)\n",
